great-idea-website/css/index.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 1px;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* Set every element's box-sizing to border-box */
* {
	box-sizing: border-box;
}

html, body {
    height: 100%;
    font-family: 'Titillium Web', sans-serif;
}

h1, h2, h3, h4, h5 {
    font-family: 'Bangers', cursive;
    letter-spacing: 1px;
    margin-bottom: 15px;
}

/* Your code starts here! */
header .container1 {
	text-align: justify;
}

header .container1 a {
	display: inline-block;
	width:11%;
}

header .container1 .logo {
	display: inline-block;
	width: 20%;
}

h2 {
	text-decoration: capitalize;
	text-align: left;
}

.section0 div {
	display: inline-block;
	margin: 0 auto; 
	width: 45%;
	padding-top: 5%;
	padding-bottom: 5%;
}

.section0 div .elTitle {
	width: 30%;
	padding-bottom: 10%;
	padding-right: 30%;
	padding-left: -30%;
	font-size: 100px;
}

.section0 div .getStarted {
	display: inline-block;
	border: 1px solid black;
}

.section1 {
	border-top: 1px solid black;
}

.section2 {
	border-bottom: 1px solid black;
}
.container2 div {
	display: inline-block;
	margin: 0 auto;
	width: 45%;
}

.container3 div {
	display: inline-block;
	margin: 0 auto;
	width: 30%;
	padding-bottom: 5%;
}
footer {
	margin-left: 5%;
	margin-right: 5%;
	padding-top: 5%;
}
footer address {
	display: inline-block;
	width: 20%;
}

body {
	text-align: center;
}


body p {
	text-align: left;
}
body .middle-img {
	padding-top: 5%;
	padding-bottom: 5%;
}

body #IDXX {
	text-align: center;
}

